--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,14 @@ seaborn
 matplotlib
 sklearn 
 itertools
+from sklearn import linear_model
+from sklearn.naive_bayes import MultinomialNB
+from sklearn.linear_model import LogisticRegression
+from sklearn.tree import DecisionTreeClassifier
+from sklearn.ensemble import RandomForestClassifier
+from sklearn.preprocessing import LabelEncoder
+from sklearn.feature_extraction.text import CountVectorizer
+from sklearn import pipeline
+from sklearn.model_selection import train_test_split
+from sklearn import metricsitertools
+
